feat(config): CORS 헤더 수정 및 ClientRegistrationRepository Bean 등록
- SecurityConfig: exposedHeaders를 한 번에 설정하도록 로직 수정 (Set-Cookie, Authorization 동시 노출)
- CustomClientRegistrationRepository: @Bean 추가하여 InMemoryClientRegistrationRepository를 빈으로 등록
- application.yml: application-secret.yml을 import하도록 설정, 민감정보 분리를 위한 준비

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,10 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/OAuthSession?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
     username: root
-    password: 
+    password:
+
+  config:
+    import: "classpath:application-secret.yml"
 
   jpa:
     hibernate:
